<resources>
    <string name="app_name">WorDE</string>
    <string name="app_logo">Application Logo</string>
    <string name="a1">Niveau A1</string>
    <string name="a2">Niveau A2</string>
    <string name="b1">Niveau B1</string>
    <string name="landscape_a1">Niveau \n\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0A1</string>
    <string name="landscape_a2">Niveau \n\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0A2</string>
    <string name="landscape_b1">Niveau \n\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0B1</string>
    <string name="user_favourites">Lieblingswörter</string>
    <string name="other">Other</string>
    <string name="app_info">Info</string>
    <string name="night_mode">Night Mode</string>
    <string name="share">Share Word</string>
    <string name="favourite">Add To Favourites</string>
    <string name="search">Search Word with Google</string>
    <string name="share_with">Share Using</string>
    <string name="share_word_headline">Hello, I want to share this word with you;</string>
    <string name="info_dialog">This app is only developed for educational purposes 2018</string>
    <string name="navigation_drawer_close">Navigation Drawer Closed</string>
    <string name="navigation_drawer_open">Navigation Drawer Opened</string>
    <string name="added_to_favourites">Word Added To Your Favourite Words List</string>
    <string name="added_to_favourites_again">Word Added To Your Favourite Words List Back</string>
    <string name="removed_from_favourites">Word Removed From Your Favourite Words List</string>
    <string name="word_level">level</string>
    <string name="word_artikel">artikel</string>
    <string name="word">word</string>
    <string name="word_example">sample_sentence</string>
    <string name="brandenburg_gate_license_note_title">Brandenburger Gate Image License Note:</string>
    <string name="brandenburg_gate_license_note">Thomas Wolf, [<a href="http://www.foto-tw.de"> www.foto-tw.com </a>], [<a href="https://commons.wikimedia.org/wiki/File:Brandenburger_Tor_abends.jpg "> Brandenburg Gate Evening </a>], edited from Original, [<a href="https://creativecommons.org/licenses/by-sa/3.0/" rel=" license ">CC BY-SA 3.0</a>]</string>
    <string name="walk_of_ideas_license_note_title">Walk Of Ideas Image License Note:</string>
    <string name="walk_of_ideas_license_note">"Walk of Ideas - German Authors" by [<a href="https://www.flickr.com/photos/venana/">venana</a>], used under [<a href="https://creativecommons.org/licenses/by/2.0/">CC BY</a>] edited from original</string>
    <string name="ampelmann_license_note_title">Ampelmann Image License Note:</string>
    <string name="ampelmann_license_note"><a href="https://commons.wikimedia.org/wiki/File:Ampelmann_Gr%C3%BCn.svg">Ampelmann.svg:</a> German Democratic Republic / Karl Peglau (original design); Matthew Gates (SVG version)derivative work: MichaelFrey (Ampelmann.svg) [<a href="https://en.wikipedia.org/wiki/Public_domain">Public domain</a>], [<a href="https://commons.wikimedia.org/wiki/File:Ampelmann_Gr%C3%BCn.svg">via Wikimedia Commons</a>]</string>
    <string name="lieblings_lebkuchenherz_license_note_title">Lebkuchenherz Image License Note:</string>
    <string name="lieblings_lebkuchenherz_license_note">Lebkuchenherz- Liebling by [<a href="https://www.werbeherz.eu/Lebkuchenherz-Liebling">www.werbeherz.eu</a>] edited from original</string>
    <string name="used_libraries_license_note_title">Used Libraries:</string>
    <string name="AssetSQLiteOpenHelper_library_license_note"><a href="https://github.com/daolq3012/AssetSQLiteOpenHelper#assetsqliteopenhelper">AssetSQLiteOpenHelper</a> [<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>] </string>
    <string name="Recycler_Bubble_library_license_note"><a href="https://github.com/FutureMind/recycler-fast-scroll">Recycler Bubble</a>\nCopyright 2015 Future Mind \n[<a href="http://www.apache.org/licenses/LICENSE-2.0">Licensed under the Apache License, Version 2.0</a>] </string>
    <string name="widget_headline">Wort des Tages</string>
    <string name="main_notification_channel_name">Reminder</string>

    <string name="reminder_notification_title">Hallo!</string>
    <string name="reminder_notification_body">Click and learn some new WorDE</string>
    <string name="empty_favourites_list">You haven\'t added any words to \n your Favourites Word List yet.</string>

</resources>