<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_level_a1"
            android:icon="@drawable/a1"
            android:title="@string/a1"/>
        <item
            android:id="@+id/nav_level_a2"
            android:icon="@drawable/a2"
            android:title="@string/a2" />
        <item
            android:id="@+id/nav_level_b1"
            android:icon="@drawable/b1"
            android:title="@string/b1" />
    </group>
    <item android:title="@string/other">
        <menu>
            <item

                android:id="@+id/nav_user_favourites"
                android:icon="@drawable/ic_favorite_black"
                android:title="@string/user_favourites" />
            <item
                android:id="@+id/nav_night_mode"
                android:icon="@drawable/ic_brightness_3"
                android:title="@string/night_mode" />
            <item
                android:id="@+id/nav_app_info"
                android:icon="@drawable/ic_info_outline"
                android:title="@string/app_info" />

        </menu>
    </item>
</menu>