<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:id="@+id/intent"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_word_artikel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="12dp"
        android:contentDescription="@string/word_artikel"
        tools:text="@string/word_artikel"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appwidget_word_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/word"
        tools:text="@string/word"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/appwidget_word_example_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/word_example"
        tools:text="@string/word_example"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>