<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:id="@+id/level_a1_cardview"
        style="@style/MainActivityPortraitCardStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/a1"
        android:nextFocusRight="@id/level_a2_cardview"
        android:nextFocusDown="@id/level_b1_cardview"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:layout_constraintBottom_toTopOf="@id/level_b1_cardview"
        app:layout_constraintEnd_toStartOf="@id/level_a2_cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/a1"
            android:scaleType="fitXY"
            android:src="@drawable/ampelmann"
            android:visibility="visible" />

        <TextView
            style="@style/GeneralTextViewStyle"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/a1"
            android:textSize="@dimen/word_text_size" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/level_a2_cardview"
        style="@style/MainActivityPortraitCardStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/a2"
        android:nextFocusLeft="@id/level_a1_cardview"
        android:nextFocusDown="@id/favourite_words_cardview"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:layout_constraintBottom_toTopOf="@id/favourite_words_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/level_a1_cardview"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:contentDescription="@string/a2"
            android:scaleType="fitCenter"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/brandenburgertor" />

        <TextView
            style="@style/GeneralTextViewStyle"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/a2"
            android:textSize="@dimen/word_text_size" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/level_b1_cardview"
        style="@style/MainActivityPortraitCardStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:nextFocusUp="@id/level_a1_cardview"
        android:contentDescription="@string/b1"
        android:nextFocusLeft="@id/favourite_words_cardview"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favourite_words_cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_a1_cardview">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/b1"
            android:scaleType="fitXY"
            android:src="@drawable/walkofideas" />

        <TextView
            style="@style/GeneralTextViewStyle"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/b1"
            android:textSize="@dimen/word_text_size" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/favourite_words_cardview"
        style="@style/MainActivityPortraitCardStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:nextFocusUp="@id/level_a2_cardview"
        android:nextFocusRight="@id/level_b1_cardview"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        android:contentDescription="@string/user_favourites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/level_b1_cardview"
        app:layout_constraintTop_toBottomOf="@id/level_a2_cardview">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_favourites"
            android:scaleType="fitXY"
            android:src="@drawable/lebkuchenherz" />

        <TextView
            style="@style/GeneralTextViewStyle"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/user_favourites"
            android:textSize="@dimen/word_text_size" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>